# CfMatting_cuda_mkl

./: README.md
CfMatting_cuda_mkl/: README.md
CfMatting_cuda_mkl/CfMatting_CUDA/: CfMatting.cu  CfMatting.h  CfMatting_CUDA.vcxproj  main.cu  utils.cu  utils.h
linux/: CMakeLists.txt
linux/include/: CfMatting.h
linux/src/: CfMatting.cu  utils.cu
windows/CfMatting/: CfMatting.sln
windows/CfMatting/CfMatting/: CfMatting.vcxproj
windows/CfMatting/CfMatting/include/: utils.h
windows/CfMatting/CfMatting/src/: main.cpp  utils.cu
windows/CfMatting/CfMatting/x64/Release/: CfMatting.cu.cache  utils.cu.cache
windows/CfMatting/CfMatting/x64/Release/CfMatting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CfMatting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/CfMatting/CfMatting/x64/Release/src/: CfMatting.cu.deps  utils.cu.deps
windows/CfMatting/x64/Release/: CfMatting.iobj  CfMatting.ipdb
